CCD-4198 Added additional data to the response